# Wind_Waves

./: README.md  pyproject.toml
Notebooks/: Data_Download.ipynb  Defining_Substorm_Epoch.ipynb  Figure2_Fmin_Distribution_MLT.ipynb  Figure6_Spectragram_LFE_HFE_Detection.ipynb  README.md  high_resolution_spectragram.ipynb
Notebooks/Walker2026_Frequency_Extensions_of_AKR/: Calculating_Frequency_Extension.ipynb  Calculating_Integrated_Power.ipynb  Data_Download.ipynb  Defining_Substorm_Epoch.ipynb  Figure10_HFE_Counts_Epoch.ipynb  Figure11_HFE_Integrated_Power.ipynb  Figure1_Spectragram.ipynb  Figure2_Fmin_Distribution_MLT.ipynb  Figure3_Fmin_Distribution_Epoch.ipynb  Figure4_Fmax_Distribution_MLT.ipynb  Figure5_Fmax_Distribution_Epoch.ipynb  Figure6_Spectragram_LFE_HFE_Detection.ipynb  Figure7_Frequency_Extension_Polar_Occurrence.ipynb  Figure8_LFE_Counts_Epoch.ipynb  Figure9_LFE_Integrated_Power.ipynb  Refining_AKR_Frequency_Extent.ipynb
Notebooks/Walker2026_treating_discrete_flux_measurements_in_radio_measurements_from_RAD1/: Figure1_Frequency_Channel_Observations.ipynb  Figure2_Solar_Radio_Burst.ipynb  Figure3_AKR_Burst.ipynb  Figure4_LFE.ipynb  Figure5_Integrated_Power.ipynb
binder/: environment.yml
legacy/: old_plotting.py  old_reading.py
src/Wind_Waves/: data_download.py  integration_tools.py  plotting_tools.py  reading_tools.py
